# run_sample_muti_gpu

./: Cargo.toml  run.sh  run.slurm  slurm-2345338.out
src/: all_reduce.rs  main.rs
